samples/_failures_safe/1761306497_d38646_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b28c1ada.c: In function ‘main’:
./samples/SAFE/__tmp_b28c1ada.c:156:19: error: expected ‘;’ at end of input
  156 |             result
      |                   ^
      |                   ;
./samples/SAFE/__tmp_b28c1ada.c:156:13: error: expected declaration or statement at end of input
  156 |             result
      |             ^~~~~~
./samples/SAFE/__tmp_b28c1ada.c:156:13: error: expected declaration or statement at end of input
